commiting to main

--- a/about.html
+++ b/about.html
@@ -33,27 +33,21 @@
 <ul>
 <li>George Porter</li>
 </ul>
+<h3 id="maintainers">Maintainers</h3>
+<ul>
+<li>R. S. Doiel</li>
+</ul>
 <p>Command line tools, Golang package and Python module for working with
 the EPrints 3.x REST API</p>
-<h3 id="keywords">Keywords</h3>
-<ul>
-<li>metadata</li>
-<li>repository</li>
-<li>EPrints</li>
-<li>CrossRef</li>
-<li>DataCite</li>
-<li>software</li>
-</ul>
-<h3 id="software">Software</h3>
 <ul>
 <li>License: <a
 href="https://caltechlibrary.github.io/eprinttools/license.html"
-title="link to license">https://caltechlibrary.github.io/eprinttools/license.html</a></li>
+class="uri">https://caltechlibrary.github.io/eprinttools/license.html</a></li>
 <li>GitHub: <a href="https://github.com/caltechlibrary/eprinttools"
-title="link to GitHub">https://github.com/caltechlibrary/eprinttools</a></li>
+class="uri">https://github.com/caltechlibrary/eprinttools</a></li>
 <li>Issues: <a
 href="https://github.com/caltechlibrary/eprinttools/issues"
-title="link to GitHub issues">https://github.com/caltechlibrary/eprinttools/issues</a></li>
+class="uri">https://github.com/caltechlibrary/eprinttools/issues</a></li>
 </ul>
 <h3 id="programming-languages">Programming languages</h3>
 <ul>
