--- a/install.html
+++ b/install.html
@@ -30,14 +30,19 @@ service that can also be run from the command line or setup as a
 “daemon” and run from systemd. They allow you to harvest, work with
 EPrint repository content, and import content from CrossRef and
 DataCite.</p>
+<h2 id="quick-install-with-curl">Quick install with curl</h2>
+<p>There is an experimental installer.sh script that can be run with the
+following command to install lastest table release. This may work for
+macOS, Linux and if you’re using Windows with the Unix subsystem.</p>
+<pre><code>curl https://caltechlibrary.github.io/eprinttools/installer.sh | sh</code></pre>
 <p>Below are generalized instructions for installation of a release.</p>
 <h2 id="compiled-version">Compiled version</h2>
-<p>Compiled versions are available for Mac OS X (amd64 and M1 processor,
-macos-amd64, macos-arm64), Linux (amd64 process, linux-amd64), Windows
+<p>Compiled versions are available for macOS (Intel and M1 processors as
+macos-amd64 or macos-arm64), Linux (amd64 process, linux-amd64), Windows
 (amd64 and arm64 processor, windows-amd64 and windows-arm64) and
 Rapsberry Pi (arm7 processor, raspbian-arm7)</p>
 <p>VERSION_NUMBER is a <a href="http://semver.org/">symantic version
-number</a> (e.g. <code>v1.0.3</code>)</p>
+number</a> (e.g. <code>v1.3.0</code>)</p>
 <p>For all the released version go to the project page on Github and
 click latest release</p>
 <blockquote>
