--- a/macos-workflow.html
+++ b/macos-workflow.html
@@ -45,6 +45,11 @@ and click “Open” in the dialog</li>
 <li>Close the Terminal and reopen it, you should now be ready to use
 doi2eprintxml</li>
 </ol>
+<p>Steps 2 through 4</p>
+<pre><code>curl https://caltechlibrary.caltech.edu/eprinttools/installer.sh
+open bin</code></pre>
+<p>Step six close the Terminal window and reopen it. You should now be
+ready to use <code>doi2eprintxml</code>.</p>
 <h2 id="getting-started">Getting started</h2>
 <p>The tool <code>doi2eprintxml</code> is a command line program, it is
 normally run from the terminal’s command prompt. The purpose of the
