--- a/search.html
+++ b/search.html
@@ -23,8 +23,8 @@
 </nav>
 
 <section>
-<h1 id="project-search">project search</h1>
-<link href="/pagefind/pagefind-ui.css" rel="stylesheet">
+<h1 id="project-search">Project Search</h1>
+<p><link href="/pagefind/pagefind-ui.css" rel="stylesheet"></p>
 <script src="/pagefind/pagefind-ui.js" type="text/javascript"></script>
 <div id="search">
 
