--- a/macos-workflow.html
+++ b/macos-workflow.html
@@ -46,7 +46,7 @@ and click “Open” in the dialog</li>
 doi2eprintxml</li>
 </ol>
 <p>Steps 2 through 4</p>
-<pre><code>curl https://caltechlibrary.caltech.edu/eprinttools/installer.sh
+<pre><code>curl https://caltechlibrary.github.io/eprinttools/installer.sh
 open bin</code></pre>
 <p>Step six close the Terminal window and reopen it. You should now be
 ready to use <code>doi2eprintxml</code>.</p>
