fix: missing program name in doi2eprintxml -version

--- a/macos-workflow.html
+++ b/macos-workflow.html
@@ -46,10 +46,15 @@ and click “Open” in the dialog</li>
 doi2eprintxml</li>
 </ol>
 <p>Steps 2 through 4</p>
-<pre><code>curl https://caltechlibrary.github.io/eprinttools/installer.sh
+<pre><code>curl https://caltechlibrary.github.io/eprinttools/installer.sh | sh
 open bin</code></pre>
+<p>Step five switch to the finder window. Right click on the
+<code>doi2eprintxml</code> program, then click “open” in the dialog
+box.</p>
 <p>Step six close the Terminal window and reopen it. You should now be
 ready to use <code>doi2eprintxml</code>.</p>
+<p>You can test by running the command
+<code>doi2eprintxml -version</code>.</p>
 <h2 id="getting-started">Getting started</h2>
 <p>The tool <code>doi2eprintxml</code> is a command line program, it is
 normally run from the terminal’s command prompt. The purpose of the
