commiting to main

--- a/macos-workflow.html
+++ b/macos-workflow.html
@@ -37,6 +37,7 @@ this back off after run the software installed installed.</p>
 <h2 id="installation-and-setup">Installation and setup</h2>
 <ol type="1">
 <li>Open the Terminal application</li>
+<li>Change to your home directory (<code>cd</code></li>
 <li>Type the “curl” command below</li>
 <li>Follow the instructions it provides</li>
 <li>Run the “open” command</li>
@@ -45,13 +46,14 @@ and click “Open” in the dialog</li>
 <li>Close the Terminal and reopen it, you should now be ready to use
 doi2eprintxml</li>
 </ol>
-<p>Steps 2 through 4</p>
-<pre><code>curl https://caltechlibrary.github.io/eprinttools/installer.sh | sh
+<p>Steps 2 through 5</p>
+<pre><code>cd
+curl https://caltechlibrary.github.io/eprinttools/installer.sh | sh
 open bin</code></pre>
-<p>Step five switch to the finder window. Right click on the
+<p>Step 6 switch to the finder window. Right click on the
 <code>doi2eprintxml</code> program, then click “open” in the dialog
 box.</p>
-<p>Step six close the Terminal window and reopen it. You should now be
+<p>Step 7 close the Terminal window and reopen it. You should now be
 ready to use <code>doi2eprintxml</code>.</p>
 <p>You can test by running the command
 <code>doi2eprintxml -version</code>.</p>
