commiting to main

--- a/install.html
+++ b/install.html
@@ -144,6 +144,9 @@ Windows 10 after downloading the zip file.</p>
     cp -v bin/* $HOME/bin/
     export PATH=$HOME/bin:$PATH
     eputil -version</code></pre>
+<p>Windows on ARM is relatively rare (in 2023). There are a few Windows
+for ARM developer boxes out and some Microsoft Surface tablets use an
+ARM processor.</p>
 <h3 id="linux">Linux</h3>
 <ol type="1">
 <li>Download the zip file</li>
