--- a/windows-10-workflow.html
+++ b/windows-10-workflow.html
@@ -25,13 +25,22 @@
 <section>
 <h1 id="notes-on-using-doi2eprintxml.exe-on-windows-10">Notes on using
 doi2eprintxml.exe on Windows 10</h1>
+<p>NOTE: Most Windows machines use an Intel or AMD style processor.
+You’ll want the zip file with both “windows” and “amd64” in the name.
+The exceptions are some Microsoft Surface tablets and specialized
+developer machines like Microsoft/Qualcomm’s deverloper for ARM NUC. If
+you are unsure you can type “info” in the search box of your taskbar
+then click “System Info”. Here’s the instructions on Microsoft’s website
+<a
+href="https://support.microsoft.com/en-us/windows/view-your-system-info-a965a8f2-0773-1d65-472a-1e747c9ebe00"
+class="uri">https://support.microsoft.com/en-us/windows/view-your-system-info-a965a8f2-0773-1d65-472a-1e747c9ebe00</a></p>
 <h2 id="installation-and-setup">Installation and setup</h2>
 <ol type="1">
 <li>With your web browser goto
 https://github.com/caltechlibrary/eprinttools/releases/</li>
-<li>Download the file called “eprinttools-v1.2.2-windows-amd64.zip”.
+<li>Download the file called “eprinttools-v1.3.1-windows-amd64.zip”.
 <ul>
-<li>if there is a newer version (e.g. v1.2.2) download that instead</li>
+<li>if there is a newer version (e.g. v1.3.1) download that instead</li>
 </ul></li>
 <li>Unzip the downloaded zip file</li>
 <li>Copy “doi2eprintxml.exe” to where you want to work
