commiting to main

--- a/windows-10-workflow.html
+++ b/windows-10-workflow.html
@@ -34,6 +34,12 @@ then click “System Info”. Here’s the instructions on Microsoft’s website
 <a
 href="https://support.microsoft.com/en-us/windows/view-your-system-info-a965a8f2-0773-1d65-472a-1e747c9ebe00"
 class="uri">https://support.microsoft.com/en-us/windows/view-your-system-info-a965a8f2-0773-1d65-472a-1e747c9ebe00</a></p>
+<p>You’re looking for an entry for “processor”. It may look something
+like</p>
+<p>~~~ Processor(s): 1 Processor(s) Installed. [01]: Intel64 Family 6
+Model 142 Stepping 12 GenuineIntel ~1803 Mhz ~~</p>
+<p>If you see “Intel” somewhere in the description choose the Zip file
+with “windos” and “amd64” in the name.</p>
 <h2 id="installation-and-setup">Installation and setup</h2>
 <ol type="1">
 <li>With your web browser goto
