commiting to main

--- a/ROADMAP.html
+++ b/ROADMAP.html
@@ -25,23 +25,23 @@
 <section>
 <h1 id="roadmap">Roadmap</h1>
 <ol type="1">
-<li><input type="checkbox" disabled="" checked="" />Develop an extended
-API base on direct MySQL table access</li>
-<li><input type="checkbox" disabled="" checked="" />Implement a simple
-JSON model for crosswalking EPrints to Invenion 3</li>
-<li><input type="checkbox" disabled="" checked="" />Remove dependencies
-on cli package</li>
-<li><input type="checkbox" disabled="" checked="" />Implement rule sets
-for apply Caltech Library practice selectively</li>
-<li><input type="checkbox" disabled="" checked="" />Implement an
-extended EPrints API including support for metadata import</li>
-<li><input type="checkbox" disabled="" />Implement a index export JSON
-model for integration with Solr/OpenSearch/LunrJS</li>
-<li><input type="checkbox" disabled="" />Implement eprint update of
-metadata for existing records</li>
-<li><input type="checkbox" disabled="" />Implement complete crosswalk
-for EPrint XML records ot Invenio 3 records for all Caltech Library
-EPrints repositories</li>
+<li><label><input type="checkbox" checked="" />Develop an extended API
+base on direct MySQL table access</label></li>
+<li><label><input type="checkbox" checked="" />Implement a simple JSON
+model for crosswalking EPrints to Invenion 3</label></li>
+<li><label><input type="checkbox" checked="" />Remove dependencies on
+cli package</label></li>
+<li><label><input type="checkbox" checked="" />Implement rule sets for
+apply Caltech Library practice selectively</label></li>
+<li><label><input type="checkbox" checked="" />Implement an extended
+EPrints API including support for metadata import</label></li>
+<li><label><input type="checkbox" />Implement a index export JSON model
+for integration with Solr/OpenSearch/LunrJS</label></li>
+<li><label><input type="checkbox" />Implement eprint update of metadata
+for existing records</label></li>
+<li><label><input type="checkbox" />Implement complete crosswalk for
+EPrint XML records ot Invenio 3 records for all Caltech Library EPrints
+repositories</label></li>
 </ol>
 </section>
 
