--- a/about.html
+++ b/about.html
@@ -24,25 +24,29 @@
 
 <section>
 <h1 id="about-this-software">About this software</h1>
-<h2 id="eprinttools-1.3.9">eprinttools 1.3.9</h2>
+<h2 id="eprinttools-1.3.10">eprinttools 1.3.10</h2>
+<p>updated module depencies per issue #68</p>
 <h3 id="authors">Authors</h3>
 <ul>
-<li>R. S. Doiel</li>
+<li>R. S. Doiel, <a href="https://orcid.org/0000-0003-0900-6903"
+class="uri">https://orcid.org/0000-0003-0900-6903</a></li>
 </ul>
 <h3 id="contributors">Contributors</h3>
 <ul>
-<li>George Porter</li>
+<li>George Porter, <a href="https://orcid.org/0000-0002-6539-638X"
+class="uri">https://orcid.org/0000-0002-6539-638X</a></li>
 </ul>
 <h3 id="maintainers">Maintainers</h3>
 <ul>
-<li>R. S. Doiel</li>
+<li>R. S. Doiel, <a href="https://orcid.org/0000-0003-0900-6903"
+class="uri">https://orcid.org/0000-0003-0900-6903</a></li>
 </ul>
 <p>Command line tools, Golang package and Python module for working with
 the EPrints 3.x REST API</p>
 <ul>
 <li>License: <a
-href="https://caltechlibrary.github.io/eprinttools/license.html"
-class="uri">https://caltechlibrary.github.io/eprinttools/license.html</a></li>
+href="https://caltechlibrary.github.io/eprinttools/LICENSE"
+class="uri">https://caltechlibrary.github.io/eprinttools/LICENSE</a></li>
 <li>GitHub: <a href="https://github.com/caltechlibrary/eprinttools"
 class="uri">https://github.com/caltechlibrary/eprinttools</a></li>
 <li>Issues: <a
@@ -51,7 +55,14 @@ class="uri">https://github.com/caltechlibrary/eprinttools/issues</a></li>
 </ul>
 <h3 id="programming-languages">Programming languages</h3>
 <ul>
-<li>Go &gt;= 1.22</li>
+<li>Go &gt;= 1.24.2</li>
+</ul>
+<h3 id="software-requirements">Software Requirements</h3>
+<ul>
+<li>Go &gt;= 1.24.2</li>
+<li>GNU Make &gt; 3</li>
+<li>Pandoc &gt; 3</li>
+<li>CMTools &gt;= 0.0.23</li>
 </ul>
 </section>
 
