--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 <section>
 <h1 id="about-this-software">About this software</h1>
 <h2 id="eprinttools-1.3.10">eprinttools 1.3.10</h2>
-<p>updated module depencies per issue #68</p>
+<p>updated module depencies per issue #68.</p>
 <h3 id="authors">Authors</h3>
 <ul>
 <li>R. S. Doiel, <a href="https://orcid.org/0000-0003-0900-6903"
